fixes z-index of dropdown

--- a/src/pages/FindWorkers/FindWorkers.scss
+++ b/src/pages/FindWorkers/FindWorkers.scss
@@ -1,6 +1,7 @@
 #find-workers {
   .search-container {
     position: relative;
+    z-index: 1;
 
     .search-wrap {
       .custom-form-control {
